# Photon-Neuromorphics-SDK

./: .dockerignore  ARCHITECTURE.md  AUTONOMOUS_SDLC_REPORT.md  CHANGELOG.md  CI_CD_SETUP.md  CI_CD_WORKFLOW_NOTE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  GENERATION4_REVOLUTIONARY_REPORT.md  GENERATION5_BEYOND_REVOLUTIONARY_REPORT.md  GENERATION6_TRANSCENDENT_REPORT.md  GENERATION7_TRANSCENDENT_COMPLETION_REPORT.md  GLOBAL_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  TERRAGON_AUTONOMOUS_COMPLETION_REPORT.md  TERRAGON_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  autonomous_production_deployment.py  autonomous_validation_system.py  comprehensive_quality_gates.py  deployment_report_1756347478.json  distributed_ai_optimizer.py  docker-compose.production.yml  docker-compose.yml  enhanced_error_handling.py  intelligent_monitoring_dashboard.py  performance_optimization.py  production_deployment_pipeline.py  production_deployment_quantum_suite.py  progressive_quality_gates.py  pyproject.toml  pytest.ini  quality_report_1756347270.json  requirements-dev.txt  requirements.txt  setup.py  test_autonomous_sdlc.py  (+2 more)
deployment-docs/: DEPLOYMENT.md  OPERATIONS.md  TROUBLESHOOTING.md
docs/: ROADMAP.md  index.rst
examples/: advanced_optical_training.py  basic_usage.py  generation4_revolutionary_demo.py  quantum_photonic_interface.py  robust_features_demo.py
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
photon_neuro/: __init__.py  cli.py
research/: comparative_quantum_classical.py  experimental_framework.py  generation4_revolutionary_quantum.py  generation5_beyond_revolutionary_validation.py  publication_ready_results.md  quantum_error_correction_ml.py  quantum_limited_networks.py
terraform/: main.tf  (+1 more)
(+91 files in other folders)
