[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photon-neuromorphics-sdk"
version = "0.6.0+autonomous"
description = "Silicon-photonic spiking neural network library with WebAssembly SIMD acceleration"
readme = "README.md"
license = {text = "BSD 3-Clause"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@photon-neuro.io"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "torch>=1.10.0",
    "matplotlib>=3.5.0",
    "h5py>=3.6.0",
    "tqdm>=4.62.0",
    "onnx>=1.12.0",
]

[project.optional-dependencies]
hardware = [
    "pyvisa>=1.11.0",
    "pyserial>=3.5",
]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
photon-neuro = "photon_neuro.cli:main"

[project.urls]
Homepage = "https://github.com/danieleschmidt/Photon-Neuromorphics-SDK"
Documentation = "https://photon-neuro.io"
Repository = "https://github.com/danieleschmidt/Photon-Neuromorphics-SDK"
Issues = "https://github.com/danieleschmidt/Photon-Neuromorphics-SDK/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["photon_neuro*"]
exclude = ["tests*"]
